--- a/Web.config
+++ b/Web.config
@@ -13,8 +13,9 @@
     <customErrors mode="RemoteOnly"  defaultRedirect="rcError" />
   </system.web>
   <connectionStrings>
-    <!--<add name="Checking_Master" connectionString="Data Source=192.168.0.29;Initial Catalog=CheckingDB;Persist Security Info=True;User ID=checking_master;Password=123456a@" providerName="System.Data.SqlClient"/>-->
-  <add name="Checking_Master" connectionString="Data Source=VIETTUNG-PC\SQLEXPRESS;Initial Catalog=CheckingDB;Persist Security Info=True;User ID=checking_master;Password=123459876" providerName="System.Data.SqlClient"/>  </connectionStrings>
+    <add name="Checking_Master" connectionString="Data Source=192.168.0.29;Initial Catalog=CheckingDB;Persist Security Info=True;User ID=checking_master;Password=123456a@" providerName="System.Data.SqlClient"/>
+  <!--<add name="Checking_Master" connectionString="Data Source=VIETTUNG-PC\SQLEXPRESS;Initial Catalog=CheckingDB;Persist Security Info=True;User ID=checking_master;Password=123459876" providerName="System.Data.SqlClient"/> --> 
+  </connectionStrings>
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SqlServerCe.4.0"/>
